--- a/src/app/views/features/campaign/campaign.component.html
+++ b/src/app/views/features/campaign/campaign.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-content-center">
-  <div class="col-10">
+  <div class="col-10 md:col-10 lg:col-10">
     <p-card>
       <h2>行銷活動</h2>
       <div class="flex justify-content-end">
@@ -8,9 +8,9 @@
         </span>
       </div>
       <p-table [rowsPerPageOptions]="[10, 15]" [(first)]="first" [showCurrentPageReport]="true"
-                [globalFilterFields]="['status','start_date']" (onLazyLoad)="loadTable($event)" #dt1 [loading]="loading"
+               [globalFilterFields]="['status','start_date']" (onLazyLoad)="loadTable($event)" #dt1 [loading]="loading"
                [value]="GetAllCampaign" [paginator]="true" [rows]="5" [lazy]="true" [totalRecords]="totalRecords"
-               currentPageReportTemplate="共 {totalRecords} 筆" >
+               currentPageReportTemplate="共 {totalRecords} 筆">
         <ng-template pTemplate="caption">
           <div class="flex">
             <div class="flex align-items-center ml-2">
@@ -34,15 +34,23 @@
             <th pSortableColumn="status">狀態
               <p-sortIcon field="status"></p-sortIcon>
             </th>
-            <th pSortableColumn="name">活動名稱<p-sortIcon field="name"></p-sortIcon></th>
+            <th pSortableColumn="name">活動名稱
+              <p-sortIcon field="name"></p-sortIcon>
+            </th>
             <th>父系活動</th>
-<!--            <th pSortableColumn="patrilineal_name">父系活動<p-sortIcon field="patrilineal_name"></p-sortIcon></th>-->
-            <th pSortableColumn="type">類型<p-sortIcon field="type"></p-sortIcon></th>
-            <th pSortableColumn="start_date">開始時間<p-sortIcon field="start_date"></p-sortIcon></th>
-            <th pSortableColumn="end_date">結束時間<p-sortIcon field="end_date"></p-sortIcon></th>
+            <!--            <th pSortableColumn="patrilineal_name">父系活動<p-sortIcon field="patrilineal_name"></p-sortIcon></th>-->
+            <th pSortableColumn="type">類型
+              <p-sortIcon field="type"></p-sortIcon>
+            </th>
+            <th pSortableColumn="start_date">開始時間
+              <p-sortIcon field="start_date"></p-sortIcon>
+            </th>
+            <th pSortableColumn="end_date">結束時間
+              <p-sortIcon field="end_date"></p-sortIcon>
+            </th>
             <th>業務員</th>
-<!--             <th pSortableColumn="salesperson_name">業務員<p-sortIcon field="salesperson_name"></p-sortIcon></th>-->
-<!--            <th pSortableColumn="member">成員已回應<p-sortIcon field="member"></p-sortIcon></th>-->
+            <!--             <th pSortableColumn="salesperson_name">業務員<p-sortIcon field="salesperson_name"></p-sortIcon></th>-->
+            <!--            <th pSortableColumn="member">成員已回應<p-sortIcon field="member"></p-sortIcon></th>-->
             <th></th>
           </tr>
         </ng-template>
@@ -62,13 +70,19 @@
             <td>{{ campaign.end_date }}</td>
             <td>{{ campaign.created_by }}</td>
             <!-- <td>{{ campaign.member }}</td> -->
-            <td class="icon-align-right flex mt-1"><p-button icon="pi pi-eye" pTooltip="檢視" tooltipPosition="top"
-                styleClass="p-button-rounded p-button-secondary p-button-text" [routerLink]="['/main/campaign/view/', campaign.campaign_id]"></p-button>
-            <p-button (click)="showDialog('edit',campaign)" icon="pi pi-pencil" pTooltip="編輯" tooltipPosition="top"
-                styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
-            <p-button icon="pi pi-trash" pTooltip="刪除" tooltipPosition="top"
-                      (click)="deleteCampaignRequest(campaign.campaign_id)"
-                styleClass="p-button-rounded p-button-secondary p-button-text"></p-button></td>
+            <td>
+              <div class="flex justify-content-end">
+                <p-button icon="pi pi-eye" pTooltip="檢視" tooltipPosition="top"
+                          styleClass="p-button-rounded p-button-secondary p-button-text"
+                          [routerLink]="['/main/campaign/view/', campaign.campaign_id]"></p-button>
+                <p-button (click)="showDialog('edit',campaign)" icon="pi pi-pencil" pTooltip="編輯"
+                          tooltipPosition="top"
+                          styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+                <p-button icon="pi pi-trash" pTooltip="刪除" tooltipPosition="top"
+                          (click)="deleteCampaignRequest(campaign.campaign_id)"
+                          styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+              </div>
+            </td>
 
           </tr>
         </ng-template>
@@ -79,120 +93,125 @@
 <form [formGroup]="campaign_form">
   <p-dialog [(visible)]="edit" header={{dialogHeader}} [modal]="true">
     <div class="grid">
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label><span class="required-star">*</span>活動名稱</label>
           <input type="text" pInputText formControlName="name"
-            [ngClass]="{'ng-dirty':campaign_form.controls['name'].hasError('required') && campaign_form.controls['name'].touched}">
+                 [ngClass]="{'ng-dirty':campaign_form.controls['name'].hasError('required') && campaign_form.controls['name'].touched}">
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>業務員</label>
           <br>
           <label class="mt-2 ml-2 disable">{{(campaign_form.controls['salesperson_name'].value)}}</label>
         </div>
       </div>
-      <div class="col-6" *ngIf="!showedit">
+      <div class="col-12 md:col-6 lg:col-6" *ngIf="!showedit">
         <div class="field">
           <label>狀態</label>
           <br>
           <label class="mt-2 ml-2" [textContent]="campaign_form.controls['status'].value"></label>
         </div>
       </div>
-      <div class="col-6" *ngIf="showedit">
+      <div class="col-12 md:col-6 lg:col-6" *ngIf="showedit">
         <div class="field">
           <label>狀態</label>
           <p-dropdown placeholder="請選擇" [disabled]="true" appendTo="body" [options]="status" formControlName="status"
-            optionLabel="name" (onChange)="onStatusChange($event)"></p-dropdown>
+                      optionLabel="name" (onChange)="onStatusChange($event)"></p-dropdown>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>啟用</label>
           <br>
           <p-checkbox formControlName="is_enable" value="is_enable" [binary]="true"></p-checkbox>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>父系行銷活動</label>
           <p-dropdown placeholder="請選擇" [disabled]="true" appendTo="body" [options]="GetAllparent_campaign"
-                      [filter]="true"  filterBy="label" [showClear]="true"
-            formControlName="parent_campaign_id"></p-dropdown>
+                      [filter]="true" filterBy="label" [showClear]="true"
+                      formControlName="parent_campaign_id"></p-dropdown>
           <div class="required-star" *ngIf="campaign_form.controls['parent_campaign_id'].hasError('Parent_idError')">
-            無法選取同樣的行銷活動到父系行銷活動中</div>
+            無法選取同樣的行銷活動到父系行銷活動中
+          </div>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>類型</label>
           <p-dropdown placeholder="請選擇" [disabled]="true" appendTo="body" [options]="type" formControlName="type"
-            optionLabel="name" (onChange)="ontypeChange($event)"></p-dropdown>
+                      optionLabel="name" (onChange)="ontypeChange($event)"></p-dropdown>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>開始日期</label>
           <p-calendar #startDate [appendTo]="'body'" dateFormat="yy-mm-dd" [showButtonBar]="true"
-            formControlName="start_date" [readonlyInput]="true"></p-calendar>
+                      formControlName="start_date" [readonlyInput]="true"></p-calendar>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>結束日期</label>
           <p-calendar #endDate [appendTo]="'body'" dateFormat="yy-mm-dd" [showButtonBar]="true"
-            formControlName="end_date" [minDate]="startDate.value"
-            [readonlyInput]="true"></p-calendar>
-            <div class="required-star" *ngIf="campaign_form.controls['end_date'].hasError('incorrect')">
-              結束日期不可早於開始日期</div>
+                      formControlName="end_date" [minDate]="startDate.value"
+                      [readonlyInput]="true"></p-calendar>
+          <div class="required-star" *ngIf="campaign_form.controls['end_date'].hasError('incorrect')">
+            結束日期不可早於開始日期
+          </div>
         </div>
       </div>
-      <div class="col-12">
+      <div class="col-12 md:col-12 lg:col-12">
         <div class="field">
           <label>描述</label>
           <textarea rows="5" pInputTextarea formControlName="description"></textarea>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>已傳送數目</label>
           <p-inputNumber class="w-full" formControlName="sent" [min]="0">
           </p-inputNumber>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>預算成本</label>
-          <p-inputNumber class="w-full" mode="currency" currency="TWD" formControlName="budget_cost" [minFractionDigits]="0"
-          [min]="0"></p-inputNumber>
+          <p-inputNumber class="w-full" mode="currency" currency="TWD" formControlName="budget_cost"
+                         [minFractionDigits]="0"
+                         [min]="0"></p-inputNumber>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>預期回應 (%)</label>
           <br>
           <p-inputNumber class="w-full" inputId="percent" formControlName="expected_responses" suffix="%"
-          [min]="0" [max]="100">
+                         [min]="0" [max]="100">
           </p-inputNumber>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>實際成本</label>
-          <p-inputNumber class="w-full" mode="currency" currency="TWD" formControlName="actual_cost" [minFractionDigits]="0"
-          [min]="0"></p-inputNumber>
+          <p-inputNumber class="w-full" mode="currency" currency="TWD" formControlName="actual_cost"
+                         [minFractionDigits]="0"
+                         [min]="0"></p-inputNumber>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>預期收入</label>
-          <p-inputNumber class="w-full" mode="currency" currency="TWD" formControlName="expected_income" [minFractionDigits]="0"
-          [min]="0"></p-inputNumber>
+          <p-inputNumber class="w-full" mode="currency" currency="TWD" formControlName="expected_income"
+                         [minFractionDigits]="0"
+                         [min]="0"></p-inputNumber>
         </div>
       </div>
-      <div class="col-6"></div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6"></div>
+      <div class="col-12 md:col-6 lg:col-6">
         <label>建立者：</label>
         <br>
         <div class="mt-3 field">
@@ -200,12 +219,12 @@
           <label class="ml-2 disable">{{(campaign_form.controls['created_at'].value)}}</label>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <label>上次修改者：</label>
         <br>
         <div class="mt-3 field">
-        <label class="disable">{{(campaign_form.controls['updated_by'].value)}}</label>
-        <label class="ml-2 disable">{{(campaign_form.controls['updated_at'].value)}}</label>
+          <label class="disable">{{(campaign_form.controls['updated_by'].value)}}</label>
+          <label class="ml-2 disable">{{(campaign_form.controls['updated_at'].value)}}</label>
         </div>
       </div>
     </div>
@@ -215,7 +234,8 @@
       </ng-container>
       <ng-container *ngIf="!disableSaveButton">
         <ng-container *ngIf="showedit">
-          <p-button label="儲存" (click)="patchCampaignRequest(c_id)"  [disabled]="disableSaveButton"  styleClass="p-button-outlined p-button-info"></p-button>
+          <p-button label="儲存" (click)="patchCampaignRequest(c_id)" [disabled]="disableSaveButton"
+                    styleClass="p-button-outlined p-button-info"></p-button>
         </ng-container>
         <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
       </ng-container>
