--- a/src/app/views/features/contact/contact.component.html
+++ b/src/app/views/features/contact/contact.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-content-center">
-  <div class="col-10">
+  <div class="col-10 md:col-10 lg:col-10">
     <p-card>
       <h2>聯絡人</h2>
       <div class="flex justify-content-end">
@@ -61,7 +61,7 @@
 <form [formGroup]="contact_form">
   <p-dialog [(visible)]="edit" header={{dialogHeader}} [modal]="true">
     <div class="grid">
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label><span class="text-red-600">*</span>帳戶</label>
           <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)" formControlName="account_name"
@@ -71,21 +71,21 @@
           </p-dropdown>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>業務員</label>
           <br>
           <label>{{(contact_form.controls['created_by'].value)}}</label>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label><span class="text-red-600">*</span>姓名</label>
           <input pInputText formControlName="name"
                  [ngClass]="{'ng-dirty':contact_form.controls['name'].hasError('required') && contact_form.controls['name'].touched}">
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>稱謂</label>
           <p-dropdown placeholder="請選擇" [disabled]="true" [options]="salutation" optionLabel="name"
@@ -93,13 +93,13 @@
                       formControlName="salutation" appendTo="body"></p-dropdown>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>行動電話</label>
           <input pInputText formControlName="cell_phone">
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label><span class="text-red-600">*</span>公司電話</label>
           <input
@@ -113,19 +113,19 @@
           <input pInputText formControlName="email">
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>職稱</label>
           <input pInputText formControlName="title">
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>部門</label>
           <input pInputText formControlName="department">
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>直屬上司</label>
           <p-dropdown placeholder="請選擇" [disabled]="true"
@@ -135,14 +135,14 @@
     </div>
     <ng-container *ngIf="dialogHeader === '編輯聯絡人'">
       <div class="grid">
-        <div class="col-6">
+        <div class="col-12 md:col-6 lg:col-6">
           <label>建立者：</label>
           <div class="mt-3 field">
             <label>{{(contact_form.controls['created_by'].value)}}</label>
             <label>{{(contact_form.controls['created_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-12 md:col-6 lg:col-6">
           <label>上次修改者：</label>
           <div class="mt-3 field">
             <label>{{(contact_form.controls['updated_by'].value)}}</label>
@@ -152,8 +152,8 @@
       </div>
     </ng-container>
     <div class="grid">
-      <div class="col-6"></div>
-      <div class="col-6 mt-3">
+      <div class="col-12 md:col-6 lg:col-6"></div>
+      <div class="col-12 md:col-6 lg:col-6 mt-3">
         <div class="flex justify-content-end mt-3">
           <ng-container *ngIf="dialogHeader === '編輯聯絡人'">
             <p-button label="儲存" (click)="patchContact();edit=false"
