--- a/src/app/views/features/lead/view-lead/view-lead.component.html
+++ b/src/app/views/features/lead/view-lead/view-lead.component.html
@@ -1,5 +1,5 @@
 <div class="grid mt-2">
-  <div class="col-3">
+  <div class="col-12 md:col-12 lg:col-3">
     <div class="mb-3">
       <p-card>
         <h3>Gina</h3>
@@ -29,7 +29,7 @@
       </div>
     </div>
   </div>
-  <div class="col-6">
+  <div class="col-12 md:col-12 lg:col-6">
     <div class="mb-3">
       <p-card>
       <span class="flex justify-content-center">
@@ -92,7 +92,7 @@
               <!--              </ng-container>-->
               <!--              <ng-container *ngIf="edit==true">-->
               <div class="grid">
-                <div class="col-6">
+                <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label><span class="text-red-600">*</span>線索狀態</label>
                     <p-dropdown placeholder="請選擇" optionLabel="name" [options]=which
@@ -101,13 +101,13 @@
                     ></p-dropdown>
                   </div>
                 </div>
-                <div class="col-6 mt-5">
+                <div class="col-12 md:col-6 lg:col-6 mt-5">
                   <ng-container *ngIf="status_value!=='已轉換'">
                     <p-button pTooltip="轉換" (click)="showDialog()" tooltipPosition="top" icon="pi pi-sync"
                               styleClass="p-button-rounded p-button-secondary p-button-text p-button-lg "></p-button>
                   </ng-container>
                 </div>
-                <div class="col-6">
+                <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label><span class="text-red-600">*</span>帳戶</label>
                     <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)"
@@ -117,7 +117,7 @@
                     </p-dropdown>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label>業務員</label>
                     <br>
@@ -131,7 +131,7 @@
                               [ngClass]="{'ng-dirty':lead_form.controls['description'].hasError('required') && lead_form.controls['description'].touched}"></textarea>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label>分級</label>
                     <p-dropdown placeholder="請選擇" [disabled]="true" [options]="rating" optionLabel="name"
@@ -139,7 +139,7 @@
                                 appendTo="body"></p-dropdown>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label>線索來源</label>
                     <p-dropdown placeholder="請選擇" [disabled]="true" [options]="source" optionLabel="name"
@@ -149,14 +149,14 @@
                 </div>
               </div>
               <div class="grid">
-                <div class="col-6">
+                <div class="col-12 md:col-6 lg:col-6">
                   <label>建立者：</label>
                   <div class="mt-3 field">
                     <label>{{(lead_form.controls['created_by'].value)}}</label>
                     <label>{{(lead_form.controls['created_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 md:col-6 lg:col-6">
                   <label>上次修改者：</label>
                   <div class="mt-3 field">
                     <label>{{(lead_form.controls['updated_by'].value)}}</label>
@@ -179,7 +179,7 @@
       </form>
     </div>
   </div>
-  <div class="col-3">
+  <div class="col-12 md:col-12 lg:col-3">
     <p-card>
       <h3>拜訪紀錄</h3>
       <p-divider></p-divider>
@@ -190,14 +190,14 @@
 <form [formGroup]="opportunity_form">
   <p-dialog [(visible)]="edit" header="轉換為商機" [modal]="true">
     <div class="grid">
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label><span class="text-red-600">*</span>商機名稱</label>
           <input pInputText formControlName="name"
                  [ngClass]="{'ng-dirty':opportunity_form.controls['name'].hasError('required')  && opportunity_form.controls['name'].touched}">
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label><span class="text-red-600">*</span>帳戶</label>
           <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)" formControlName="account_name"
@@ -207,7 +207,7 @@
           </p-dropdown>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label><span class="text-red-600">*</span>階段</label>
           <p-dropdown [disabled]="true" [options]="stage" optionLabel="name"
@@ -215,7 +215,7 @@
                       [ngClass]="{'ng-dirty':opportunity_form.controls['stage'].hasError('required')  && opportunity_form.controls['stage'].touched}"></p-dropdown>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label><span class="text-red-600">*</span>預測種類</label>
           <p-dropdown placeholder="請選擇" [disabled]="true" [options]="forecast_category" optionLabel="name"
@@ -224,20 +224,20 @@
                       [ngClass]="{'ng-dirty':opportunity_form.controls['forecast_category'].hasError('required')  && opportunity_form.controls['forecast_category'].touched}"></p-dropdown>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label><span class="text-red-600">*</span>結束日期</label>
           <p-calendar formControlName="close_date" appendTo="body" dateFormat="yy-mm-dd"
                       [ngClass]="{'ng-dirty':opportunity_form.controls['close_date'].hasError('required')  && opportunity_form.controls['close_date'].touched}"></p-calendar>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>金額</label>
           <input pInputText formControlName="amount">
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>業務員</label>
           <br>
