--- a/src/app/views/features/order/view-order/view-order.component.html
+++ b/src/app/views/features/order/view-order/view-order.component.html
@@ -1,5 +1,5 @@
 <div class="grid mt-2">
-  <div class="col-3">
+  <div class="col-12 md:col-12 lg:col-3">
     <div class="mb-3">
       <p-card>
         <form [formGroup]="order_form">
@@ -41,7 +41,7 @@
       </p-card>
     </div>
   </div>
-  <div class="col-6">
+  <div class="col-12 md:col-12 lg:col-6">
     <div class="mb-3">
       <p-card>
       <span class="flex justify-content-center">
@@ -102,11 +102,13 @@
                     <td>{{ order_product.quote_price }}</td>
                     <td>{{ order_product.quantity }}</td>
                     <td>{{ order_product.order_price }}</td>
-                    <td class="icon-align-right">
+                    <td>
+                      <div class="flex justify-content-end">
                       <p-button icon="pi pi-pencil" pTooltip="編輯" tooltipPosition="top"
                                 styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
                       <p-button icon="pi pi-trash" styleClass="p-button-rounded p-button-secondary p-button-text"
                                 pTooltip="刪除" tooltipPosition="top"></p-button>
+                      </div>
                     </td>
                   </tr>
                 </ng-template>
@@ -139,14 +141,14 @@
             </p-tabPanel>
             <p-tabPanel header="詳細資料">
               <div class="grid">
-                <div class="col-6">
+                <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label>訂單號碼</label>
                     <br>
                     <label class="mt-2 ml-2 disable">{{(order_form.controls['code'].value)}}</label>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label><span class="required-star">*</span>契約號碼</label>
                     <p-dropdown placeholder="搜尋契約" [disabled]="true" formControlName="contract_id" appendTo="body"
@@ -157,7 +159,7 @@
                     ></p-dropdown>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label><span class="required-star">*</span>訂單開始日期</label>
                     <p-calendar [appendTo]="'body'" dateFormat="yy-mm-dd" [showButtonBar]="true"
@@ -169,7 +171,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label>狀態</label>
                     <p-dropdown placeholder="請選擇" [disabled]="true" appendTo="body" [options]="status"
@@ -178,14 +180,14 @@
                                ></p-dropdown>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label>訂單金額</label>
                     <br>
                     <label class="mt-2 ml-2" [textContent]="order_form.controls['amount'].value"></label>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label>啟用：</label>
                     <br>
@@ -195,14 +197,13 @@
                     </ng-container>
                   </div>
                 </div>
-                <div class="col-6"></div>
                 <div class="col-12">
                   <div class="field">
                     <label>描述</label>
                     <textarea [rows]="5" pInputTextarea formControlName="description"></textarea>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 md:col-6 lg:col-6">
                   <label>建立者：</label>
                   <br>
                   <div class="mt-3 field">
@@ -210,7 +211,7 @@
                     <label class="ml-2 disable">{{(order_form.controls['created_at'].value)}}</label>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 md:col-6 lg:col-6">
                   <label>上次修改者：</label>
                   <br>
                   <div class="mt-3 field">
@@ -230,7 +231,7 @@
     </div>
   </div>
 
-  <div class="col-3">
+  <div class="col-12 md:col-12 lg:col-3">
     <p-card>
       <h3>活動</h3>
       <p-divider></p-divider>
